src/objects/IBB_Product__c.object
<CustomObject>
    <fields>
        <fullName>Liability_Welcome_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with the generation of liabilities online welcome letters</description>
        <label>Liability Welcome Letter Online</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Products (Liability Welcome Letter)</relationshipLabel>
        <relationshipName>IBB_Products8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limited_Company_App_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with NPAA build</description>
        <label>Limited Company App Form</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_ProductsRIwx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_fees_Percentage__c</fullName>
        <label>Management fees - Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Management_fees_Value__c</fullName>
        <label>Management fees - Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_After_Fixed_Period__c</fullName>
        <label>Margin After Fixed Period</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_bench_percentage__c</fullName>
        <label>Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_cap__c</fullName>
        <description>Used to hold information about asset products</description>
        <label>Margin cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_duration__c</fullName>
        <label>Margin duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>Term of product</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_duration_fixed_date__c</fullName>
        <label>Margin duration fixed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_duration_term_years__c</fullName>
        <label>Margin duration term (years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_revert_percentage__c</fullName>
        <label>Revert Rate Margin %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_product_code__c</fullName>
        <label>Marketing product code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_IBB_contribution_IBB_Legal_fees__c</fullName>
        <defaultValue>400</defaultValue>
        <label>IBB Legal fees</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_amount_IBB_will_pay_toward_legal_fee__c</fullName>
        <label>Customer legal fees</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_finance_to_value_FTV__c</fullName>
        <description>The maximum finance to value that is allowed on the product</description>
        <label>Maximum FTV</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_valuation_fee_bank_will_pay__c</fullName>
        <label>Max IBB contribution to: Valuation fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maxiumum_FTI__c</fullName>
        <inlineHelpText>If a max FTI does not apply on this product, please enter as 100</inlineHelpText>
        <label>Maxiumum FTI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Deposit_Amount__c</fullName>
        <label>Minimum Deposit Amount</label>
        <summarizedField>IBB_Product_Suitability__c.Minimum_deposit_amount__c</summarizedField>
        <summaryForeignKey>IBB_Product_Suitability__c.IBB_Product__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notice_required_for_capital_withdrawl__c</fullName>
        <label>Notice required for capital withdrawl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Additional_Fee_Purchase__c</fullName>
        <description>Text applicable for additional fee&apos;s including stamp duty and sols fee&apos;s where the transaction type is a new purchase.</description>
        <label>Offer Letter: Additional Fee Purchase</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Additional_fee_refinance__c</fullName>
        <description>Text applicable for additional fee&apos;s including sols fee&apos;s where the transaction type is refinance.</description>
        <label>Offer Letter: Additional fee refinance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Buy_to_Let_1__c</fullName>
        <description>Text for offer letter for additional BTL caveat</description>
        <label>Offer Letter: Buy to Let 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Fixed_Rate_1__c</fullName>
        <description>Text applicable for fixed rates</description>
        <label>Offer Letter: Fixed Rate 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Fixed_Rate_2__c</fullName>
        <description>Text applicable for fixed rates</description>
        <label>Offer Letter: Fixed Rate 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Fixed_Rate_3__c</fullName>
        <description>Text applicable for fixed rates</description>
        <label>Offer Letter: Fixed Rate 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Lease_Agreement__c</fullName>
        <description>Text applicable for paragraph relating to the agreements and refers to the location of the Lease Agreement in the relevant T&amp;C booklet</description>
        <label>Offer Letter: Lease Agreement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Property_Outgoings__c</fullName>
        <description>Text applicable for offer letter relating to the relevant responsibilities for the outgoings relating to the property.</description>
        <label>Offer Letter: Property Outgoings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Purchase_Deposit__c</fullName>
        <description>Text applicable where the transaction type is a new purchase, relating to the acquisition cost.</description>
        <label>Offer Letter: Purchase Deposit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Purchase_Vacant_Possession__c</fullName>
        <description>Text applicable for purchases relating to the vacant possession of the property</description>
        <label>Offer Letter: Purchase Vacant Possession</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Refinance_Deposit__c</fullName>
        <description>Text applicable where the transaction type is a refinance, relating to the deposit to be paid</description>
        <label>Offer Letter: Refinance Deposit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Rights_of_Third_Parties__c</fullName>
        <description>Text applicable to rights of third parties</description>
        <label>Offer Letter: Rights of Third Parties</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Risk_Warning__c</fullName>
        <description>Risk warning</description>
        <label>Offer Letter: Risk Warning</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Transaction_Type_Eq_Rel__c</fullName>
        <description>Text applicable for paragraph 1 of the offer letter where the transaction type is an equity release.</description>
        <label>Offer Letter: Transaction Type Eq Rel</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Transaction_Type_Purchase__c</fullName>
        <description>Text applicable for paragraph 1 of the offer letter where the transaction type is a new purchase.</description>
        <label>Offer Letter: Transaction Type Purchase</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Transaction_Type_Refinance__c</fullName>
        <description>Text applicable for paragraph 1 of the offer letter where the transaction type is a refinance.</description>
        <label>Offer Letter: Transaction Type Refinance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Valuation_Report_1__c</fullName>
        <description>Text applicable for valuation report caveats</description>
        <label>Offer Letter: Valuation Report 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Version__c</fullName>
        <label>Offer Letter Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-September 2014</fullName>
                </value>
                <value>
                    <fullName>September 2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_payment_types_available__c</fullName>
        <label>Outbound payment types available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACS</fullName>
                </value>
                <value>
                    <fullName>Chaps</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Limit_Bank_Transfer__c</fullName>
        <label>Payment Limit (Bank Transfer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_Cash__c</fullName>
        <label>Payment Limit (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_Cheque__c</fullName>
        <label>Payment Limit (Cheque)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_Debit_Card__c</fullName>
        <label>Payment Limit (Debit Card)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_Direct_Debit__c</fullName>
        <label>Payment Limit (Direct Debit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_IBB_Transfer__c</fullName>
        <label>Payment Limit (IBB Transfer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Limit_Lump_Sum_Direct_Debit__c</fullName>
        <label>Payment Limit (Lump Sum Direct Debit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_amount__c</fullName>
        <label>Penalty charge amount £</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_no_of_days_interest_lost__c</fullName>
        <label>Penalty charge: no of days interest lost</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_percentage__c</fullName>
        <label>Penalty charge %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_type__c</fullName>
        <label>Penalty charge type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed value</fullName>
                </value>
                <value>
                    <fullName>Percentage of withdrawal</fullName>
                </value>
                <value>
                    <fullName>Loss of all interest</fullName>
                </value>
                <value>
                    <fullName>Loss of fixed days interest</fullName>
                </value>
                <value>
                    <fullName>Penalty interest rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Penalty_charges__c</fullName>
        <label>Penalty charges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_of_application_fee_paid__c</fullName>
        <description>The amount of administration fee that is paid on application expressed as a percentage.</description>
        <label>Administration fee paid on application %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period_1_EPC_duration_months__c</fullName>
        <label>Period 1 EPC duration (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_2_EPC_duration_months__c</fullName>
        <label>Period 2 EPC duration (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanScheduleSection6FixedProduct__c</fullName>
        <description>To be used for fixed products ONLY on Offer Letter Plan Schedule</description>
        <label>Plan Schedule Section 6: Fixed Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The margin will not change whilst a fixed rate applies.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductEventDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductEventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipLabel>Products (ProductEventDirector)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <label>Product Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fees Assisted Fixed Mar 2011</fullName>
                </value>
                <value>
                    <fullName>Fees Assisted Only</fullName>
                </value>
                <value>
                    <fullName>Residential Property Invest</fullName>
                </value>
                <value>
                    <fullName>Standard Fixed until Mar 2011</fullName>
                </value>
                <value>
                    <fullName>Standard fixed until 31Dec13</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Switch_Admin_Fee__c</fullName>
        <label>Product Switch Admin Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Switch_Fee__c</fullName>
        <label>Product Switch Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_code__c</fullName>
        <description>The IBB product code</description>
        <label>Product code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_expiry_date__c</fullName>
        <label>Product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_live_date__c</fullName>
        <description>The date that the product is live for sale</description>
        <label>Product live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_withdraw_date__c</fullName>
        <description>The date after which the product is no longer available for sale.</description>
        <label>Product withdraw date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profit_Rate__c</fullName>
        <label>Profit Rate %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_accrued__c</fullName>
        <label>Profit accrued</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Matruity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_calculated__c</fullName>
        <label>Profit calculated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Maturity</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_of_income__c</fullName>
        <label>Profit paid as income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_paid__c</fullName>
        <label>Profit paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Maturity</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_paid_to__c</fullName>
        <label>Profit paid to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External account</fullName>
                </value>
                <value>
                    <fullName>Internal IBB account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_per_pound__c</fullName>
        <label>Profit per pound</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_rate_for_letter__c</fullName>
        <label>Profit rate for letter</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <description>The type of rate that the asset product is</description>
        <label>Rate type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Variable Discount</fullName>
                </value>
                <value>
                    <fullName>IBB Home Finance Rental Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_after_fixed_period_expiry__c</fullName>
        <label>Rate after fixed/discount period expiry</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_duration_1__c</fullName>
        <label>Rate duration 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_duration_2__c</fullName>
        <label>Rate duration 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_duration_3__c</fullName>
        <label>Rate duration 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_duration_date_1__c</fullName>
        <label>Rate duration date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_duration_date_2__c</fullName>
        <label>Rate duration date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_duration_date_3__c</fullName>
        <label>Rate duration date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_1__c</fullName>
        <label>Rate percentage 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_2__c</fullName>
        <label>Rate percentage 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_3__c</fullName>
        <label>Rate percentage 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Redemption_given__c</fullName>
        <label>Redemption given</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No early payment</fullName>
                </value>
                <value>
                    <fullName>Partial early payment</fullName>
                </value>
                <value>
                    <fullName>Full early payment</fullName>
                    <default>true</default>
                    <label>Full early payment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_type__c</fullName>
        <label>Redemption type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage of the amount paid</fullName>
                </value>
                <value>
                    <fullName>Fixed fee</fullName>
                </value>
                <value>
                    <fullName>Refund of Solicitors Contribution</fullName>
                </value>
                <value>
                    <fullName>Refund of Valuations</fullName>
                </value>
                <value>
                    <fullName>Refund of Legal</fullName>
                </value>
                <value>
                    <fullName>Cash back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_value_currency__c</fullName>
        <label>Redemption value £</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redemption_value_percentage__c</fullName>
        <label>Redemption value %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rent_Review_1__c</fullName>
        <description>Lending products are subject to rental reviews. Rental rates are currently reviewed up to a maximum of four times per annum. The rent review fields indicate in which months of the year the rental review is carried out.</description>
        <label>Rent Review 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Review_2__c</fullName>
        <description>Lending products are subject to rental reviews. Rental rates are currently reviewed up to a maximum of four times per annum. The rent review fields indicate in which months of the year the rental review is carried out.</description>
        <label>Rent Review 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>